--- a/mockup.css
+++ b/mockup.css
@@ -101,6 +101,10 @@ a {
   -webkit-transition: text-shadow .5s ease;
 }
 
+.hidden {
+	display: none;
+}
+
 #main_content_wrap a:hover {
   color: #1C5C89;
   text-shadow: #81BEE9 0px 0px 1.5px;
@@ -150,18 +154,6 @@ body {
   overflow: auto;
 }
 
-div.inner, header.inner{
-  padding-bottom: 20px;
-}
-
-nav {
-	padding: 5px 0px;
-}
-
-caption {
-	text-align: left;
-}
-
 #header_wrap, #footer_wrap {
   color: #f2f2f2;
   background: #212121;
@@ -182,23 +174,55 @@ header, footer {
   padding-top: 15px;
 }
 
-img.portrait {
-	height: 200px;
-	border: 5px solid black;
-	float: left;
-	margin: 15px 30px 0px 0px;
+/**************************************
+Content CSS
+**************************************/
+
+
+.courselist {
+	width: 100px;
 }
 
-#education tr td:nth-child(2) {
-  text-indent: 5px;
+.courseList tr:nth-child(even), .courseList thead {
+	background-color: #CCCCCC;
 }
 
-img#family {
-	height: 200px;
-	border: 5px solid black;
-	float: right;	
+.searchBar > div > * {
+	margin: 3px;
 }
 
-.unc_nav > a:first-child {
+.cnum {
+	width: 3em;
+}
+
+.dept {
+	width: 4em;
+}
+
+.day {
+	width: 4em;
+}
+
+.ctime {
+	width: 12em;
+}
+
+.instructor {
+	width: 8em;
+}
+
+.submit {
 	float: right;
+}
+
+div.inner, header.inner{
+  padding-bottom: 20px;
+}
+
+nav {
+	padding: 5px 0px;
+}
+
+caption {
+	text-align: left;
 }
