--- a/mockup.css
+++ b/mockup.css
@@ -69,7 +69,7 @@ div {
 }
 
 /**************************************
-Active CSS
+Primary CSS
 **************************************/
 
 h1 {
@@ -90,29 +90,8 @@ h3 {
   font-weight: 500;
 }
 
-a {
-  text-decoration: none;
-  color: #569FD3;
-  text-shadow: none;
-  
-  transition: color 1s ease;
-  transition: text-shadow .5s ease;
-  -webkit-transition: color 1s ease;
-  -webkit-transition: text-shadow .5s ease;
-}
-
 .hidden {
 	display: none;
-}
-
-#main_content_wrap a:hover {
-  color: #1C5C89;
-  text-shadow: #81BEE9 0px 0px 1.5px;
-}
-
-#header_wrap a:hover, #footer_wrap a:hover {
-  color: #56A0D3;
-  text-shadow: #9DCAE9 0px 0px 1.5px;
 }
 
 em {
@@ -154,13 +133,25 @@ body {
   overflow: auto;
 }
 
-#header_wrap, #footer_wrap {
-  color: #f2f2f2;
-  background: #212121;
+div.inner, header.inner{
+  padding-bottom: 20px;
 }
 
 header, footer {
   padding: 10px 0px;
+}
+
+#main_content {
+  padding-top: 15px;
+}
+
+/**************************************
+Coloring CSS
+**************************************/
+
+#header_wrap, #footer_wrap {
+  color: #f2f2f2;
+  background: #212121;
 }
 
 #main_content_wrap {
@@ -170,21 +161,58 @@ header, footer {
   border-bottom: 1px solid #111;
 }
 
-#main_content {
-  padding-top: 15px;
+#main_content_wrap a:hover {
+  color: #1C5C89;
+  text-shadow: #81BEE9 0px 0px 1.5px;
+}
+
+#header_wrap a:hover, #footer_wrap a:hover, #main_content_wrap .searchBar a:hover {
+  color: #56A0D3;
+  text-shadow: #9DCAE9 0px 0px 1.5px;
+}
+
+a {
+  text-decoration: none;
+  color: #569FD3;
+  text-shadow: none;
+  
+  transition: color 1s ease;
+  transition: text-shadow .5s ease;
+  -webkit-transition: color 1s ease;
+  -webkit-transition: text-shadow .5s ease;
+}
+
+.toolHead {
+	color: #f2f2f2;
+	background: #212121;
+}
+
+.searchBar {
+	color: #f2f2f2;
+	background: #424242;
+}
+
+#geTable tr:nth-child(odd) td:nth-child(4n-1),
+	#geTable tr:nth-child(odd) td:nth-child(4n),
+	#geTable tr:nth-child(even) td:nth-child(4n-2),
+	#geTable tr:nth-child(even) td:nth-child(4n-3) {
+	background-color: #CCCCCC;
+}
+
+.courseList tr:nth-child(even) {
+	background-color: #CCCCCC;
+}
+
+.courseList tr:hover {
+	background-color: #AAAAAA;
 }
 
 /**************************************
-Content CSS
+Content Formatting CSS
 **************************************/
 
-
-.courselist {
-	width: 100px;
-}
-
-.courseList tr:nth-child(even), .courseList thead {
-	background-color: #CCCCCC;
+table {
+	width: 100%;
 }
 
 .searchBar > div > * {
@@ -203,24 +231,31 @@ Content CSS
 	width: 4em;
 }
 
+.semester {
+	width: 4em;
+}
+
 .ctime {
 	width: 12em;
 }
 
 .instructor {
-	width: 8em;
+	width: 6em;
 }
 
+.icon {
+	width: 4em;
+}
+
+.ge {
+	width: 2em;
+}
+
+.course {
+	width: 5em;
+}
 .submit {
 	float: right;
-}
-
-div.inner, header.inner{
-  padding-bottom: 20px;
-}
-
-nav {
-	padding: 5px 0px;
 }
 
 caption {
