--- a/mockup.css
+++ b/mockup.css
@@ -241,6 +241,9 @@ div.toolBody {
 	border-bottom: 1px solid #424242;
 	border-left: 1px solid #424242;
 	border-right: 1px solid #424242;
+}
+
+.toolBody tbody {
 	max-height: 450px;
 }
 
