--- a/mockup.css
+++ b/mockup.css
@@ -244,8 +244,8 @@ div.toolBody {
 }
 
 .toolBody tbody {
-	height: 300px;
-	overflow: auto;
+	max-height: 300px;
+	overflow: scroll;
 }
 
 .searchBar > div > * {
