--- a/mockup.css
+++ b/mockup.css
@@ -313,3 +313,22 @@ caption {
 	padding-top: 15px;
 }
 
+#switchUsers {
+  display: block;
+  position: absolute;
+  top:0;
+  right: 10px;
+  z-index: 10;
+  padding: 10px 10px 10px 10px;
+  color: #fff;
+  background: #0090ff;
+  font-weight: 700;
+  box-shadow: 0 0 10px rgba(0,0,0,.5);
+  border-bottom-left-radius: 2px;
+  border-bottom-right-radius: 2px;
+}
+
+#switchUsers:hover {
+	background: #0069BA;
+}
+
